@startuml sunSale_pipeline
left to right direction

skinparam packageStyle rectangle
skinparam defaultFontSize 10
skinparam nodesep 8
skinparam ranksep 40
skinparam class {
  BackgroundColor White
  BorderColor #555
  ArrowColor #555
  FontSize 10
  AttributeFontSize 9
}
skinparam package {
  BorderColor #444
  FontSize 11
  FontStyle bold
}

' ══════════════════════════════════════════════════════════════
' TRANSLATION LAYER
' ══════════════════════════════════════════════════════════════
package "Translation Layer" #D6EAF8 {

  class NordpoolTranslator {
    - entity_id : str
    ..
    + parse(hass, now) : NordpoolData
    + translate(hass, config, raw_config, now) : NordpoolData
  }
  class NordpoolData <<primary>> {
    entries : list[PriceEntry]
    resolution : timedelta
  }

  class SolarTranslator {
    - entity_1 : str
    - entity_2 : str
    ..
    + parse(hass, now) : SolarData
    + translate(hass, config, raw_config, now) : SolarData
  }
  class SolarData <<primary>> {
    entries : list[SolarEntry]
    total_today_kwh : float
    today_remaining_kwh : float
    primary_source : str
  }

  class BatteryTranslator {
    - inverter : InverterController
    - household_load_entity : str
    ..
    + translate(hass, config, raw_config, now) : BatteryReading
  }
  class BatteryReading <<primary>> {
    soc : float
    power_kw : float
    grid_power_kw : float
    household_load_kw : float
  }

  ' ── 2-column: translator (left) | output type (right) ──
  NordpoolTranslator -[hidden]right- NordpoolData
  SolarTranslator    -[hidden]right- SolarData
  BatteryTranslator  -[hidden]right- BatteryReading

  ' ── row ordering top→bottom ──
  NordpoolTranslator -[hidden]down-> SolarTranslator
  SolarTranslator    -[hidden]down-> BatteryTranslator
  NordpoolData       -[hidden]down-> SolarData
  SolarData          -[hidden]down-> BatteryReading

  ' ── produces ──
  NordpoolTranslator o--> NordpoolData
  SolarTranslator    o--> SolarData
  BatteryTranslator  o--> BatteryReading
}

' ══════════════════════════════════════════════════════════════
' COORDINATOR-INJECTED PRIMARY DATA
' ══════════════════════════════════════════════════════════════
class EstimatedCapacity <<primary>> {
  value_kwh : float
  .. injected by Coordinator ..
}

' ══════════════════════════════════════════════════════════════
' DAG TIER 1
' ══════════════════════════════════════════════════════════════
package "DAG Tier 1" #D5F5E3 {

  class PricingNode {
    tier = 1
    ..
    + compute(ctx : NodeContext) : PriceSeries
  }
  class PriceSeries <<secondary>> {
    slots : tuple[PriceSlot]
    resolution : timedelta
    + slot_at(t) : PriceSlot
    + window(t1, t2) : tuple
  }

  class BatteryStateNode {
    tier = 1
    ..
    + compute(ctx : NodeContext) : BatteryState
  }
  class BatteryState <<secondary>> {
    soc : float
    estimated_capacity_kwh : float
  }

  class BatteryStatusNode {
    tier = 1
    ..
    + compute(ctx : NodeContext) : BatteryStatus
  }
  class BatteryStatus <<secondary>> {
    total_capacity_kwh : float
    max_charge_power_kw : float
    max_discharge_power_kw : float
    soc : float
    remaining_capacity_kwh : float
  }

  PricingNode       -[hidden]right- PriceSeries
  BatteryStateNode  -[hidden]right- BatteryState
  BatteryStatusNode -[hidden]right- BatteryStatus
  PricingNode       -[hidden]down->  BatteryStateNode
  BatteryStateNode  -[hidden]down->  BatteryStatusNode
  PriceSeries       -[hidden]down->  BatteryState
  BatteryState      -[hidden]down->  BatteryStatus

  PricingNode       o--> PriceSeries
  BatteryStateNode  o--> BatteryState
  BatteryStatusNode o--> BatteryStatus
}

' ══════════════════════════════════════════════════════════════
' DAG TIER 2
' ══════════════════════════════════════════════════════════════
package "DAG Tier 2" #FDFDE8 {

  class GenerationNode {
    tier = 2
    ..
    + compute(ctx : NodeContext) : GenerationSeries
  }
  class GenerationSeries <<secondary>> {
    slots : tuple[GenerationSlot]
    primary : str
    + energy_between(t1, t2) : float
  }

  class DegradationNode {
    tier = 2
    ..
    + compute(ctx : NodeContext) : DegradationCost
  }
  class DegradationCost <<secondary>> {
    value_kwh : float
  }

  GenerationNode   -[hidden]right- GenerationSeries
  DegradationNode  -[hidden]right- DegradationCost
  GenerationNode   -[hidden]down->  DegradationNode
  GenerationSeries -[hidden]down->  DegradationCost

  GenerationNode  o--> GenerationSeries
  DegradationNode o--> DegradationCost
}

' ══════════════════════════════════════════════════════════════
' DAG TIER 3
' ══════════════════════════════════════════════════════════════
package "DAG Tier 3" #FDEBD0 {

  class LockoutNode {
    tier = 3
    ..
    + compute(ctx : NodeContext) : CalculationResult
  }
  class CalculationResult <<secondary>> {
    slots : tuple[SlotDecision]
    feed_in_lockout_windows : tuple
    total_negative_sale_kwh : float
    computed_at : datetime
  }

  class ChargingProfileNode {
    tier = 3
    ..
    + compute(ctx : NodeContext) : ChargingProfile
  }
  class ChargingProfile <<secondary>> {
    slots : tuple[ChargingProfileSlot]
    free_capacity_kwh : float
    today_remaining_generation_kwh : float
    solar_exceeds_capacity : bool
    allocated_solar_kwh : float
    total_no_export_kwh : float
  }

  LockoutNode         -[hidden]right- CalculationResult
  ChargingProfileNode -[hidden]right- ChargingProfile
  LockoutNode         -[hidden]down-> ChargingProfileNode
  CalculationResult   -[hidden]down-> ChargingProfile

  LockoutNode         o--> CalculationResult
  ChargingProfileNode o--> ChargingProfile
}

' ══════════════════════════════════════════════════════════════
' DAG TIER 4
' ══════════════════════════════════════════════════════════════
package "DAG Tier 4" #F5EEF8 {

  class OptimizerNode {
    tier = 4
    + compute(ctx : NodeContext) : Schedule
    .. emits: InverterActionEvent ..
  }
  class Schedule <<secondary>> {
    slots : list[ScheduleSlot]
    total_expected_profit_eur : float
    computed_at : datetime
  }

  OptimizerNode -[hidden]right- Schedule
  OptimizerNode o--> Schedule
}

' ══════════════════════════════════════════════════════════════
' DAG TIER 5 — SINK
' ══════════════════════════════════════════════════════════════
package "DAG Tier 5 (sink)" #FDEDEC {

  class DashboardNode {
    tier = 5
    ..
    + compute(ctx : NodeContext) : DashboardData
  }
  class DashboardData <<secondary>> {
    future_slots : list[dict]
    solar_frozen_forecast : list[dict]
  }

  DashboardNode -[hidden]right- DashboardData
  DashboardNode o--> DashboardData
}

' ══════════════════════════════════════════════════════════════
' FORCE LEFT→RIGHT PACKAGE ORDER
' (hidden anchors between tiers so dependency arrows don't reorder packages)
' ══════════════════════════════════════════════════════════════
NordpoolData      -[hidden]right-> PricingNode
NordpoolData      -[hidden]right-> BatteryStateNode
PriceSeries       -[hidden]right-> GenerationNode
BatteryState      -[hidden]right-> DegradationNode
GenerationSeries  -[hidden]right-> LockoutNode
CalculationResult -[hidden]right-> OptimizerNode
Schedule          -[hidden]right-> DashboardNode

' ══════════════════════════════════════════════════════════════
' DEPENDENCIES
' Node ..> DataType  =  node depends on (consumes) that type
' ══════════════════════════════════════════════════════════════

PricingNode       ..> NordpoolData
BatteryStateNode  ..> BatteryReading
BatteryStateNode  ..> EstimatedCapacity
BatteryStatusNode ..> BatteryReading

GenerationNode  ..> SolarData
GenerationNode  ..> PriceSeries
DegradationNode ..> BatteryState

LockoutNode ..> PriceSeries
LockoutNode ..> GenerationSeries
LockoutNode ..> BatteryState

ChargingProfileNode ..> BatteryStatus
ChargingProfileNode ..> GenerationSeries
ChargingProfileNode ..> PriceSeries

OptimizerNode ..> PriceSeries
OptimizerNode ..> CalculationResult
OptimizerNode ..> GenerationSeries
OptimizerNode ..> BatteryState
OptimizerNode ..> DegradationCost

DashboardNode ..> NordpoolData
DashboardNode ..> SolarData
DashboardNode ..> BatteryReading
DashboardNode ..> PriceSeries
DashboardNode ..> GenerationSeries
DashboardNode ..> Schedule

' ══════════════════════════════════════════════════════════════
' LEGEND
' ══════════════════════════════════════════════════════════════
legend right
  <b>Notation</b>
  o-->  produces (class aggregates its output type)
  ..>   depends on (class consumes this type as input)
  <<primary>>   HA state translated to domain type
  <<secondary>> computed by a DAG node
endlegend

@enduml
